--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,72 +1,67 @@
 /*
-	Future Imperfect by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
-/* Button */
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		border: solid 1px #dedede;
-	}
 
 /* Form */
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	input[type="tel"],
-	select,
 	textarea {
-		border: solid 1px #dedede;
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-/* Post */
+/* Image */
 
-	.post {
-		border: solid 1px #dedede;
+	.image {
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		.post > header {
-			border-bottom: solid 1px #dedede;
+		.image img {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
 		}
 
-/* Mini Post */
+/* Icon */
 
-	.mini-post {
-		border: solid 1px #dedede;
+	.icon.major {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-/* Header */
+/* Button */
 
-	#header {
-		border-bottom: solid 1px #dedede;
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	.button {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		#header .links {
-			border-left: solid 1px #dedede;
-		}
+/* Box */
 
-		#header .main ul li {
-			border-left: solid 1px #dedede;
-		}
-
-/* Sidebar */
-
-	#sidebar > * {
-		border-top: solid 1px #dedede;
+	.box.post .inner {
+		margin-left: 35%;
 	}
 
-/* Menu */
+/* Dropotron */
 
-	#menu {
-		border-left: solid 1px #dedede;
+	.dropotron {
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		#menu > * {
-			border-top: solid 1px #dedede;
-		}
+/* Banner */
+
+	#banner {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+/* Wrapper */
+
+	.wrapper.style2 {
+		background: #fdfdfd url("images/bg01.png");
+	}
